--- a/src/app/components/posts/post-list/post-list.component.html
+++ b/src/app/components/posts/post-list/post-list.component.html
@@ -8,7 +8,7 @@
 <div fxFlex fxLayout="column" fxLayoutGap="10px">
   <div fxLayout="row wrap">
     <div
-      *ngFor="let post of posts | async; trackBy: trackByFn"
+      *ngFor="let post of posts; trackBy: trackByFn"
       fxFlex="25"
       fxFlex.md="33"
       fxFlex.sm="50"
@@ -19,7 +19,7 @@
       <!-- <ng-container *ngIf="post.category === 'Dev'"> -->
 
       <!--mat-card for each post with data-binding from post.ts-->
-      <mat-card class="mat-elevation-z1" routerLink="{{ post.id }}">
+      <mat-card class="mat-elevation-z1" (click)="onSelectPost(post)">
         <mat-card-content>
           <p class="title-style">{{ post.title }}</p>
           <p class="content-style" style="height: 90px">
