feat: post create, update & delete fnctns updated

--- a/src/app/components/posts/post-dashboard/post-dashboard.component.html
+++ b/src/app/components/posts/post-dashboard/post-dashboard.component.html
@@ -65,7 +65,7 @@
   <button
     mat-raised-button
     (click)="createPost()"
-    [disabled]="!title || !content || !image || !category"
+    [disabled]="!title || !content || !category"
     color="accent"
   >
     {{ buttonText }}
