refactor: add commenting, remove console log

--- a/src/app/components/posts/post-detail/post-detail.component.html
+++ b/src/app/components/posts/post-detail/post-detail.component.html
@@ -107,7 +107,7 @@
         <span>
           <a class="credit-date-text">
             <app-svg-camera></app-svg-camera>
-            <!-- {{ post.imageby }} -->unused
+            {{ post.image }} <!--text only-->
           </a>
           <div fxFlex></div>
           <p class="credit-date-text">
