--- a/src/app/components/posts/post-list/post-list.component.html
+++ b/src/app/components/posts/post-list/post-list.component.html
@@ -35,7 +35,7 @@
               {{ post.category }}
               <div fxFlex></div>
               <app-svg-timer></app-svg-timer>
-              {{ post.content | readTime }} minutes
+              {{ post.content | readTime }} mins
             </span>
           </p>
         </mat-card-content>
