--- a/src/app/components/posts/post-list/post-list.component.scss
+++ b/src/app/components/posts/post-list/post-list.component.scss
@@ -1,7 +1,7 @@
 // Card styling
-.mat-card-image {
-  flex-shrink: 0;
-}
+// .mat-mdc-card-image {
+//   flex-shrink: 0;
+// }
 
 .title-style {
   margin: 0 0 4px;
@@ -21,8 +21,8 @@
   font-size: 14px !important;
 }
 
-.image-div {
-  position: relative;
-  text-align: center;
-  color: white;
-}
+// .image-div {
+//   position: relative;
+//   text-align: center;
+//   color: white;
+// }
