--- a/src/app/components/posts/post-detail/post-detail.component.scss
+++ b/src/app/components/posts/post-detail/post-detail.component.scss
@@ -1,5 +1,6 @@
 // @import "../../../theme.scss";
 
+/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version.*/
 mat-card {
   margin: 0 auto;
   max-width: 800px;
@@ -10,6 +11,7 @@ mat-form-field {
   width: 100%;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version.*/
 mat-card-actions {
   margin: auto;
 }
@@ -20,6 +22,7 @@ mat-card-actions {
   margin: 0;
 }
 
+/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version.*/
 mat-card-header {
   margin: 0 !important;
   padding: 0;
