refactor: remove fxflex & unused code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="root-container">
-  <app-top-navbar></app-top-navbar>
-  <router-outlet></router-outlet>
+  <app-top-navbar />
+  <router-outlet />
 </div>
