--- a/src/app/components/posts/post-list/post-list.component.scss
+++ b/src/app/components/posts/post-list/post-list.component.scss
@@ -1,10 +1,14 @@
 .title-style {
   margin: 0 0 4px;
   font-size: 18px;
+  font-style: bold;
+  color: #3F51B5;
 }
 
 .subtitle-style {
   font-size: 14px;
+  font-style:  bold italic;
+  color: #3F51B5;
 }
 
 .card-style {
