fix: correct time ago to convert firestore time stamp, footer spacings

--- a/src/app/components/posts/post-detail/post-detail.component.html
+++ b/src/app/components/posts/post-detail/post-detail.component.html
@@ -63,7 +63,7 @@
                   ></textarea>
                 </mat-form-field>
                 <br />
-                <div class="bottom-button-row">
+                <div class="bottom-button-row" align="center">
                   <button
                     mat-flat-button
                     color="accent"
@@ -120,7 +120,7 @@
                   </span>
                 </mat-card-content>
                 <hr class="horiz-line" />
-                <mat-card-actions class="detail-card-actions" align="left">
+                <mat-card-actions class="detail-card-actions" align="center">
                   <button
                     mat-raised-button
                     (click)="returnToList()"
